legend for graph, overflow issues still exist

--- a/simple/main.css
+++ b/simple/main.css
@@ -115,3 +115,7 @@ span.red {
 .bar {
   fill: Tomato;
 }
+
+.legend-key{
+  padding-left: 15px;
+}
